--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <title> Acrediras </title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">  
+        <meta name="viewport" content="height=device-height, 
+                      width=device-width, initial-scale=1.0, 
+                      minimum-scale=1.0, maximum-scale=1.0, 
+                      user-scalable=no, target-densitydpi=device-dpi">   
         <meta name="author" content="Joao Augsto">
         <meta name="keywords" content="Sao paulo, medicina, acrediras">
         
