--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="pt-br">
     <head>
-        <title> Acrediras </title>
+        <title> acrediras </title>
         <meta charset="utf-8">
         <meta name="viewport" content="height=device-height, 
                       width=device-width, initial-scale=1.0, 
